--- a/views/index.html
+++ b/views/index.html
@@ -39,6 +39,14 @@
             <p><b>Name:</b> {{album.name}}</p>
             <p><b>Artist:</b> {{album.artistName}}</p>
         </div>
+        <div>
+          <h1>Add new Album</h1>
+          <form>
+            <input type="text" name="albumName" class="form-control" placeholder="Album Name">
+            <input type="text" name="artistName" class="form-control" placeholder="Artist Name">
+            <input type="submit" value="Add Album">
+          </form>
+        </div>
     </div>
 </body>
 
