--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="tunely">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,13 +19,14 @@
     <!-- APPLICATION SCRIPTS -->
     <script src="/scripts/app.js"></script>
 
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="jumbotron">
-      <div class="container">
-        <h1>Welcome to tunely</h1>
-        <p>Your music binder!</p>
-      </div>
+        <div class="container">
+            <h1>Welcome to tunely</h1>
+            <p>Your music binder!</p>
+        </div>
     </div>
 
     <!-- Here we declare the controller that will be in charge of the
@@ -32,41 +34,51 @@
         means that the controller's alias within the HTML will be
         albumsIndexCtrl-->
     <div class="container" ng-controller="AlbumsIndexController as albumsIndexCtrl">
-      <input type="text" class="form-control" placeholder="New album name" ng-model="albumsIndexCtrl.newAlbum.name">
-      <input type="text" class="form-control" placeholder="New album artist" ng-model="albumsIndexCtrl.newAlbum.artistName">
-      <p><b>albumsIndexCtrl.newAlbum:</b> {{albumsIndexCtrl.newAlbum}}</p>
-      <input type="text" class="form-control" ng-model="searchText" placeholder="Search Albums">
-      <div ng-repeat="album in albumsIndexCtrl.albums | orderBy: 'name' | filter: searchText" class="row">
+        <form ng-submit="albumsIndexCtrl.createAlbum(albumsIndexCtrl.newAlbum)">
+            <input type="text" class="form-control" placeholder="New album name" ng-model="albumsIndexCtrl.newAlbum.name">
+            <input type="text" class="form-control" placeholder="New album artist" ng-model="albumsIndexCtrl.newAlbum.artistName">
+            <textarea placeholder="Genres seperated by coma" class="form-control" ng-model="albumsIndexCtrl.newAlbum.genres"></textarea>
+            <p><b>albumsIndexCtrl.newAlbum:</b> {{albumsIndexCtrl.newAlbum}}</p>
+            <input type="submit" value="Add Album">
+        </form></br>
 
-        <div class="col-md-10 col-md-offset-1">
-          <div class="panel panel-default">
-            <div class="panel-body">
+        <input type="text" class="form-control" ng-model="searchText" placeholder="Search Albums">
+        <div ng-repeat="album in albumsIndexCtrl.albums | orderBy: 'name' | filter: searchText" class="row">
 
-            <!-- begin album internal row -->
-              <div class="row">
-                <div class="col-md-3 col-xs-12 thumbnail">
-                  <img src="images/800x800.png" alt="album image">
+            <div class="col-md-10 col-md-offset-1">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+
+                        <!-- begin album internal row -->
+                        <div class="row">
+                            <div class="col-md-3 col-xs-12 thumbnail">
+                                <img src="images/800x800.png" alt="album image">
+                            </div>
+
+                            <div class="col-md-9 col-xs-12">
+                                <ul class="list-group form-inline">
+                                    <li class="list-group-item">
+                                        <h4 class="inline-header">Album Name:</h4>
+                                        <span>{{album.name}}</span>
+                                    </li>
+
+                                    <li class="list-group-item">
+                                        <h4 class="inline-header">Artist Name:</h4>
+                                        <span>{{album.artistName}}</span>
+                                    </li>
+
+                                    <li class="list-group-item">
+                                        <h4 class="inline-header">Genres:</h4>
+                                        <span ng-repeat="genre in album.genres">{{genre}}, </span>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
-                <div class="col-md-9 col-xs-12">
-                  <ul class="list-group form-inline">
-                    <li class="list-group-item">
-                      <h4 class="inline-header">Album Name:</h4>
-                      <span>{{album.name}}</span>
-                    </li>
-
-                    <li class="list-group-item">
-                      <h4 class="inline-header">Artist Name:</h4>
-                      <span>{{album.artistName}}</span>
-                    </li>
-                  </ul>
-                </div>
-              </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </body>
+</body>
 
 </html>
