--- a/views/index.html
+++ b/views/index.html
@@ -111,6 +111,7 @@
                   </ul>
                 </div>
               </div>
+              <button class='btn btn-danger' ng-click="albumsIndexCtrl.deleteAlbum(album)">Delete Album</button>
             </div>
           </div>
         </div>
