--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="tunely">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,105 +19,114 @@
     <!-- APPLICATION SCRIPTS -->
     <script src="/scripts/app.js"></script>
 
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="jumbotron">
-      <div class="container">
-        <h1>Welcome to tunely</h1>
-        <p>Your music binder!</p>
-      </div>
+        <div class="container">
+            <h1>Welcome to tunely</h1>
+            <p>Your music binder!</p>
+        </div>
     </div>
 
     <div class="container" ng-controller="AlbumsIndexController as albumsIndexCtrl">
-      <div class="row">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
 
-          <form class="form-horizontal" ng-submit="albumsIndexCtrl.createAlbum()">
-            <fieldset>
+                <form class="form-horizontal" ng-submit="albumsIndexCtrl.createAlbum()">
+                    <fieldset>
 
-              <!-- Form Name -->
-              <legend>Add New Album</legend>
+                        <!-- Form Name -->
+                        <legend>Add New Album</legend>
 
-              <!-- Text input-->
-              <div class="form-group">
-                <label class="col-md-4 control-label">Album Name</label>
-                <div class="col-md-4">
-                <input id="name" ng-model="albumsIndexCtrl.newAlbum.name" type="text" class="form-control input-md" required="">
-                </div>
-              </div>
+                        <!-- Text input-->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label">Album Name</label>
+                            <div class="col-md-4">
+                                <input id="name" ng-model="albumsIndexCtrl.newAlbum.name" type="text" class="form-control input-md" required="">
+                            </div>
+                        </div>
 
-              <!-- Text input-->
-              <div class="form-group">
-                <label class="col-md-4 control-label">Artist Name</label>
-                <div class="col-md-4">
-                <input ng-model="albumsIndexCtrl.newAlbum.artistName" type="text" class="form-control input-md">
-                </div>
-              </div>
+                        <!-- Text input-->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label">Artist Name</label>
+                            <div class="col-md-4">
+                                <input ng-model="albumsIndexCtrl.newAlbum.artistName" type="text" class="form-control input-md">
+                            </div>
+                        </div>
 
-              <!-- Text input-->
-              <div class="form-group">
-                <label class="col-md-4 control-label">Release Date</label>
-                <div class="col-md-4">
-                <input ng-model="albumsIndexCtrl.newAlbum.releaseDate" type="text" class="form-control input-md">
-                </div>
-              </div>
+                        <!-- Text input-->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label">Release Date</label>
+                            <div class="col-md-4">
+                                <input ng-model="albumsIndexCtrl.newAlbum.releaseDate" type="text" class="form-control input-md">
+                            </div>
+                        </div>
 
-              <!-- Textarea -->
-              <div class="form-group">
-                <label class="col-md-4 control-label">Genres (separated by commas)</label>
-                <div class="col-md-4">
-                  <textarea class="form-control" ng-model="albumsIndexCtrl.newAlbum.genres"></textarea>
-                </div>
-              </div>
+                        <!-- Textarea -->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label">Genres (separated by commas)</label>
+                            <div class="col-md-4">
+                                <textarea class="form-control" ng-model="albumsIndexCtrl.newAlbum.genres"></textarea>
+                            </div>
+                        </div>
 
 
-              <!-- Button -->
-              <div class="form-group">
-                <label class="col-md-4 control-label">Save Album</label>
-                <div class="col-md-4">
-                  <button class="btn btn-primary">Submit</button>
-                </div>
-              </div>
-            </fieldset>
-          </form>
-        </div>
-      </div>
-
-      <p>{{albumsIndexCtrl.newAlbum}}</p>
-
-      <input type="text" class="form-control" ng-model="searchText" placeholder="Search Albums">
-      <div ng-repeat="album in albumsIndexCtrl.albums | orderBy: 'name' | filter: searchText" class="row">
-
-        <div class="col-md-10 col-md-offset-1">
-          <div class="panel panel-default">
-            <div class="panel-body">
-
-            <!-- begin album internal row -->
-              <div class="row">
-                <div class="col-md-3 col-xs-12 thumbnail">
-                  <img src="images/800x800.png" alt="album image">
-                </div>
-
-                <div class="col-md-9 col-xs-12">
-                  <ul class="list-group form-inline">
-                    <li class="list-group-item">
-                      <h4 class="inline-header">Album Name:</h4>
-                      <span>{{album.name}}</span>
-                    </li>
-
-                    <li class="list-group-item">
-                      <h4 class="inline-header">Artist Name:</h4>
-                      <span>{{album.artistName}}</span>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <button class='btn btn-danger' ng-click="albumsIndexCtrl.deleteAlbum(album)">Delete Album</button>
+                        <!-- Button -->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label">Save Album</label>
+                            <div class="col-md-4">
+                                <button class="btn btn-primary">Submit</button>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
             </div>
-          </div>
         </div>
-      </div>
+
+        <p>{{albumsIndexCtrl.newAlbum}}</p>
+
+        <input type="text" class="form-control" ng-model="searchText" placeholder="Search Albums">
+        <div ng-repeat="album in albumsIndexCtrl.albums | orderBy: 'name' | filter: searchText" class="row">
+
+            <div class="col-md-10 col-md-offset-1">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+
+                        <!-- begin album internal row -->
+                        <div class="row">
+                            <div class="col-md-3 col-xs-12 thumbnail">
+                                <img src="images/800x800.png" alt="album image">
+                            </div>
+
+                            <div class="col-md-9 col-xs-12">
+                                <ul class="list-group form-inline">
+                                    <li class="list-group-item">
+                                        <h4 class="inline-header">Album Name:</h4>
+                                        <span>{{album.name}}</span>
+                                    </li>
+
+                                    <li class="list-group-item">
+                                        <h4 class="inline-header">Artist Name:</h4>
+                                        <span>{{album.artistName}}</span>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <button class='btn btn-danger' ng-click="albumsIndexCtrl.deleteAlbum(album)">Delete Album</button>
+                        <button class='btn btn-info' ng-hide="editing" ng-click="editing = true">Edit Album</button>
+                        <div ng-show="editing">
+                            <h3>Change album name:</h3>
+                            <input class="form-control" type="text" ng-model="album.name" name="name">
+                            <h3>Change artist name:</h3>
+                            <input class="form-control" type="text" ng-model="album.artistName" name="artistName">
+                            <button class='btn btn-success' ng-show="editing" ng-click="albumsIndexCtrl.editAlbum(album); editing = false">Save Changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </body>
+</body>
 
 </html>
