--- a/views/templates/albums-show.html
+++ b/views/templates/albums-show.html
@@ -7,7 +7,7 @@
             <div class="panel-body">
               <div class='row'>
                 <div class="col-md-3 col-xs-12 thumbnail">
-                  <img src="images/800x800.png" alt="album image">
+                  <img src="/images/800x800.png" alt="album image">
                 </div>
 
                 <div class="col-md-9 col-xs-12">
