--- a/views/templates/albums-show.html
+++ b/views/templates/albums-show.html
@@ -30,8 +30,17 @@
                     <li class="list-group-item">
                       <h4 class="inline-header">Songs:</h4>
                       <div class="list-group-item" ng-repeat="song in albumsShowCtrl.album.songs">
-                        ({{song.trackNumber}}){{song.name}}
+                        <button type="button" class="btn btn-info" ng-hide="editing" ng-click="editing = true"><span class="glyphicon glyphicon-pencil"></span></button>
+                        <button type="button" class="btn btn-danger" ng-hide="editing" ng-click="albumsShowCtrl.deleteSong(song)"><span class="glyphicon glyphicon-remove"></span></button>
+                        <button type="button" class="btn btn-success" ng-show="editing" ng-click="albumsShowCtrl.editSong(song); editing = false"><span class="glyphicon glyphicon-ok"> Save</span></button>
+                        ({{song.trackNumber}})
+                        <span ng-hide="editing">{{song.name}}</span>
+                        <input type="text" ng-show="editing" ng-model="song.name">
                       </div>
+                      <hr>
+                      <input class="form-control input-md" type="number" placeholder="Track number" ng-model="albumsShowCtrl.newSong.trackNumber"><br>
+                      <input class="form-control input-md" type="text" placeholder="Track name" ng-model="albumsShowCtrl.newSong.name">
+                      <button type="button" class="btn btn-success" ng-click="albumsShowCtrl.createSong(albumsShowCtrl.newSong)"><span class="glyphicon glyphicon-plus"></span> Add New Song</button>
                     </li>
                   </ul>
                 </div>
